fixed readability issue

--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ h2 {
 }
 
 input[type="radio"] {
-    display: none;
+    opacity: 0;
 }
 
 label {
@@ -102,6 +102,7 @@ aside {
 
 input[type="radio"]:checked + label {
     background-color: #F7FFBA;
+    color: black;
 }
 
 .button-list {
